# marrow

./: .gitattributes  .gitignore  README.md  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
src/: app.css  app.d.ts  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/marrow-convert/: Cargo.toml
src-tauri/crates/marrow-convert/src/: error.rs  html.rs  lib.rs
src-tauri/crates/marrow-convert/src/docx/: attrs.rs  comments.rs  fields.rs  headers.rs  images.rs  mod.rs  notes.rs  render.rs  types.rs  walker.rs
src-tauri/crates/marrow-convert/src/ooxml/: dml.rs  mod.rs  util.rs
src-tauri/crates/marrow-convert/src/pptx/: attrs.rs  authors.rs  master.rs  mod.rs  notes.rs  sections.rs  slide.rs  types.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: convert.rs  dialog.rs  git.rs  graph.rs  history.rs  mod.rs  recent.rs  search_all.rs  workspace.rs
src-tauri/src/convert/: docx.rs  html.rs  mod.rs  ooxml_dml.rs  ooxml_util.rs  pptx.rs
src-tauri/src/convert/docx/: comments.rs  headers.rs  images.rs  mod.rs  notes.rs  numbering.rs  render.rs  styles.rs  walker.rs
src-tauri/src/convert/pptx/: comments.rs  master.rs  mod.rs  notes.rs  sections.rs  slide.rs  table.rs  types.rs
src-tauri/src/core/: app_config.rs  blob_store.rs  db.rs  dialog_handler.rs  fs_watch.rs  marrow_dir.rs  mod.rs
src/lib/chrome/: ActivityBar.svelte  GraphMiniPanel.svelte  SearchSidebarPanel.svelte  StatusBar.svelte  TitleBar.svelte  activityBarState.svelte.ts
src/lib/command/: CommandPalette.svelte  commandPaletteState.svelte.ts  commands.ts
src/lib/conflict/: ConflictModal.svelte  conflictState.svelte.ts
src/lib/graph/: data.ts  (+11 more)
src/routes/: +layout.svelte  +page.svelte  Sidebar.svelte
(+119 files in other folders)
