[package]
name = "tauri-svelte-template"
version = "0.1.0"
description = "A starter template for Tauri v2 + SvelteKit + Svelte 5 + Tailwind CSS + DaisyUI"
authors = ["liren0907"]
edition = "2024"
default-run = "tauri-svelte-template"

[lib]
name = "tauri_svelte_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.90"
rfd = "0.15.0"
notify = "6"
