[package]
name = "marrow"
version = "0.1.0"
description = "Local-first multi-modal note-taking desktop app"
authors = ["liren0907"]
edition = "2024"
default-run = "marrow"

[lib]
# Suffixed with _lib to avoid Windows linker conflict with the binary name.
name = "marrow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.90"
rfd = "0.15.0"
notify = "6"
walkdir = "2"
